<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/dialog_erase_title"
        android:textColor="@color/global_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/action_erase_all"
        android:paddingBottom="30dp"
        android:layout_alignParentTop="true" />

    <CheckBox
        android:layout_below="@id/dialog_erase_title"
        android:hint="@string/switch_auth_first"
        android:textColorHint="@color/hint_color"
        android:layout_centerHorizontal="true"
        android:id="@+id/check_box_erase_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/current_auth_key"
        android:layout_below="@id/check_box_erase_auth"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hint_color"
        android:alpha="0"/>

    <LinearLayout
        android:layout_below="@id/current_auth_key"
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_erase"
            android:padding="12dp"
            android:layout_margin="4dp"
            android:id="@+id/btn_erase" />

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:padding="12dp"
            android:layout_margin="4dp"
            android:id="@+id/btn_erase_cancel" />

    </LinearLayout>

</RelativeLayout>