<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/dialog_title"
                android:textColor="@color/global_text"
                android:fontFamily="sans-serif-light"
                android:text="@string/btn_write_key" />

            <ImageButton
                android:id="@+id/info_popup"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_info_popup" />

        </LinearLayout>

        <Spinner
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/select_key_spinner"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/check_box_auth"
            android:paddingRight="18dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/switch_auth_first"
            android:textColorHint="@color/hint_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/current_auth_key"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint_color"
            android:text="Key in use: BREAKMEIFYOUCAN!"
            android:alpha="0" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_write_key"
            android:padding="12dp"
            android:layout_margin="4dp"
            android:id="@+id/btn_dialog_proceed" />

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:padding="12dp"
            android:layout_margin="4dp"
            android:id="@+id/btn_dialog_cancel" />

    </LinearLayout>


</LinearLayout>